@@ -1,3 +1,4 @@
+* Clients: implement download of existing contact information.
 * Clients: rewrite file upload support to resemble campaign upload code, and 
   detect charset encoding. Intended to fix Elastix bug #334.
 * Agent Console,Campaign Out: remove HTML codes from French translations, as 
